# pages

./: .dockerignore  .env.example  .gitignore  .oxlintrc.json  .prettierignore  .prettierrc  AI_MULTI_AGENT_REQUIREMENTS.md  COMMANDES_TESTS.md  PHASE_1_MVP_DEVELOPMENT.md  PHASE_2_ENHANCED_FEATURES_DEVELOPMENT.md  PHASE_3_ADVANCED_FEATURES_DEVELOPMENT.md  PRODUCT_PLAN.md  README.md  TECHNOLOGIES.md  angular.json  commit-message-1.2.13.txt  docker-compose.dev.yml  docker-compose.yml  package.json  pages.code-workspace  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
services/api/: .env.example  CI_LOCAL.md  Dockerfile  Dockerfile.dev  README.md  alembic.ini  bandit-report.json  docker-compose.test.yml  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 2024_12_05_0001_initial_schema.py  2024_12_05_0002_add_invitations_table.py  2024_12_05_0003_add_issue_activities_table.py  2024_12_05_0004_add_templates_table.py  2025_12_16_1439_46fc6f4041c4_add_language_to_users.py  2025_12_16_2056_add_sprints_and_backlog_order.py  2025_12_16_2251_398f262a18d2_add_workflows_tables.py  2025_12_16_2256_27d8199ceaf3_add_custom_fields_tables.py  2025_12_16_2300_ae60a787c7e1_add_issue_links_table.py  2025_12_16_2301_3c8bea2ce013_add_parent_issue_id_to_issues.py  2025_12_16_2301_842e538d2355_add_time_entries_table.py  2025_12_16_2301_ca57147acdab_add_dashboards_tables.py  2025_12_16_2333_db2589b32856_add_saved_filters_table.py  2025_12_17_1638_add_folders_and_favorites.py  2025_12_18_2142_add_page_versions_table.py  2025_12_18_2143_add_page_space_permissions_tables.py  2025_12_18_2144_add_macros_table.py  2025_12_18_2145_add_whiteboards_table.py  2025_12_18_2146_add_presences_table.py  2025_12_30_2102_1581b495f287_add_missing_columns_from_models.py  2025_12_30_2155_43e25464cdbc_add_updated_at_to_page_versions.py  2025_12_31_1020_f6618c83390b_add_project_space_card_fields.py  2026_03_01_0001_add_labels_and_issue_labels_tables.py  2026_03_01_0002_add_boards_and_board_lists_tables.py  2026_03_03_0001_add_group_boards_support.py  2026_03_03_0002_add_board_swimlane_type.py
services/api/scripts/: README.md  apply_missing_migrations.sql  migration_audit.py  run_ci_local.sh  seed.py  test_login.py
services/api/src/: __init__.py  main.py
services/api/tests/: INTEGRATION_TESTS_SETUP.md  INTEGRATION_TESTS_STATUS.md  README.md  __init__.py  conftest.py  constants.py
(+1003 files in other folders)
